Fix top menu overflow issue

--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -17,6 +17,7 @@
 
 .site-nav {
     height: 54px;
+    overflow: hidden;
 }
 
 .site-nav-left {
